# AdventOfCode

./: .gitignore  LICENSE
2018/01/: solve.hs
2018/02/: solve.hs
2018/03/: solve1.hs  solve2.hs
2018/04/: solve1.hs  solve2.hs
2018/05/: solve1.hs  solve2.hs
2018/06/: solve1.hs  solve2.hs
2018/07/: solve1.hs  solve2.hs
2018/08/: solve1.hs  solve2.hs
2018/09/: solve1.hs  solve2.hs
2018/10/: solve1.hs  solve2.hs
2018/11/: solve1.hs  solve2.hs
2018/12/: solve1.hs  solve2.hs
2018/13/: solve1.hs  solve2.hs
2018/14/: solve1.hs  solve2.hs
2018/15/: solve1.hs  solve2.hs
2018/16/: solve1.hs  solve2.hs
2018/17/: solve1.hs  solve2.hs
2018/18/: solve1.hs  solve2.hs
2018/19/: solve1.hs  solve2.hs
2018/20/: solve1.hs  solve2.hs
2018/21/: solve1.hs  solve1.txt  solve2.hs
2018/22/: solve1.hs  solve2.hs
2019/01/: solve1.hs  solve2.hs
2019/02/: solve1.hs  solve2.hs
2019/03/: solve1.hs  solve2.hs
2019/04/: solve1.hs  solve2.hs
2019/05/: solve1.hs  solve2.hs
2019/06/: solve1.hs  solve2.hs
2019/07/: solve1.hs  solve2.hs
2019/08/: solve1.hs  solve2.hs
2019/09/: solve1.hs  solve2.hs
2019/10/: solve1.hs  solve2.hs
2019/11/: solve1.hs  solve2.hs
2019/12/: solve1.hs  solve2.hs
2019/13/: solve1.hs  solve2.hs
2019/14/: solve1.hs  solve2.hs
2019/15/: solve1.hs  solve2.hs
2019/16/: solve1.hs  solve2.hs
2019/17/: solve1.hs  solve2.hs
2025/09/: run_part2.sh  solve1.hs  solve2.cabal  solve2.hs  stack.yaml
2025/10/: aoc202510.cabal  solve1.hs  solve2.hs  stack.yaml
2025/11/: aoc202511.cabal  solve1.hs  solve2.hs  stack.yaml
(+300 files in other folders)
