cabal-version:  3.6
name:           aoc202510
version:        0.1.0.0

license:        MIT
license-file:   ../../LICENSE
author:         Sebastian Paaske Tørholm

executable solve1
  main-is: solve1.hs
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , containers >= 0.8
  default-language: Haskell2010


executable solve2
  main-is: solve2.hs
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , containers >= 0.8
    , sbv >= 13.3
  default-language: Haskell2010
  ghc-options:      -O2